# python-fancy-subprocess

./: .gitignore  Justfile  README.md  pyproject.toml
fancy_subprocess/: __init__.py  _compat.py  _exit_code.py  _print.py  _reconfigure.py  _run_core.py  _run_param.py  _run_wrappers.py  _utils.py
tests/: test_runerror_bugs.py
