[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fancy-subprocess"
version = "3.0"
authors = [
    { name="Tamás PEREGI", email="petamas@gmail.com" },
]
description = "subprocess.run() with formatted output, detailed error messages and retry capabilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "ntstatus>=2.0,<3",
    "oslex>=0.1.3,<2",
    "pathext>=1.5,<2",
    "typeguard>=4.5.2,<5",
    "typing_extensions>=4.15,<5",
]

[project.urls]
"Homepage" = "https://github.com/petamas/python-fancy-subprocess"
"Bug Tracker" = "https://github.com/petamas/python-fancy-subprocess/issues"

[dependency-groups]
dev = [
    "mypy>=1.14.1,<1.15",
    "ruff>=0.15.12,<0.16",
    "ty>=0.0.34,<0.1",
]


[tool.mypy]
strict = true


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",  # isort
]
isort.force-single-line = true

[tool.ruff.lint.per-file-ignores]
# Allow star imports in __init__.py files
"__init__.py" = [
    "F403",  # undefined-local-with-import-star
    "F405",  # undefined-local-with-import-star-usage
]


[tool.ty]
rules.undefined-reveal = "ignore"
analysis.respect-type-ignore-comments = false
terminal.error-on-warning = true
